Added get() with floor/ceiling/lower/higher comparison